<resources>
    <string name="app_name">Vehicle Tracking System</string>
    <string name="action_settings">Settings</string>
    <string name="locsumrep">Location Summary Report</string>
    <string name="header">Header</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
</resources>

